syntax = "proto3";

package scuffle.video.v1.types;

import "scuffle/video/v1/types/ulid.proto";
import "scuffle/video/v1/types/rendition.proto";

// A recording is a collection of renditions of a recorded room.
// It created when a room is goes live using and contains a recording
// configuration. and is deleted manually or by a lifecycle policy.
message Recording {
  // Unique ID of the recording
  Ulid id = 1;

  // The name of the room that was recorded
  Ulid room_id = 2;

  // The name of the recording configuration that was used
  Ulid recording_config_id = 3;

  // The renditions of the recording
  // If a lifecycle policy has removed some of the renditions, they will not be
  // included here. If a lifecycle policy has removed all renditions this
  // recording object will be deleted.
  repeated Rendition renditions = 4;

  // The size of the recording in bytes
  // If the recording is not finished, this will be the current size of the
  // recording that is saved.
  int64 byte_size = 5;

  // The duration of the recording in seconds
  // If the recording is not finished, this will be the current duration
  // of the recording that is saved.
  float duration = 6;

  // The time the recording was created
  int64 created_at = 7;

  // When the recording was last modified
  int64 updated_at = 8;

  // The time the recording was finished
  optional int64 ended_at = 9;
}
